- A frame has been added for the addTask button - A second logo has been added - A timer icon has been added _____ in the tasks_row : - Icons have been resized _____ in the Strings : - The login button text has changed - The text of the Total Time message has changed. _____ in the activity_add_task : - All the design has been changed and the Id's are kept the same - Added back button to move to the main page "optional" _____ in the activity_main : - Changed side message text for the Signup and change its font size - Login text changed to Sign in _____ in the activity_sign_up page : - A message has been added with a button in case the user has an account already “optional” _____ in the activity_tasks : - All the design has been changed and the id's are kept the same

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
-            android:text="Log in"
+            android:text="Sign in"
             android:textColor="@color/co6"
             android:textSize="30dp"
             android:textStyle="bold" />
@@ -163,8 +163,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            android:text="Don't have any account?"
-            android:textSize="18dp" />
+            android:text="Not a member?"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/signupBtn"
