in the activity_main : - The login button text color has changed _____  in the activity_add_task : - The problem of entering the button on the EditText has been fixed and the font color has been changed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
                 android:background="@drawable/custom_input"
                 android:drawableStart="@drawable/custom_username_icon"
                 android:drawablePadding="5dp"
+
                 android:ems="10"
                 android:hint="@string/username_hint"
                 android:inputType="textPersonName"
@@ -140,7 +141,7 @@
             android:background="@drawable/layout_style2"
             android:padding="5dp"
             android:text="@string/loginBtn"
-            android:textColor="@color/white"
+            android:textColor="@color/co7"
             android:textSize="20dp" />
 
 
