--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -94,34 +94,32 @@
                 </LinearLayout>
             </ScrollView>
 
+
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/signupView"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="15dp">
+
+            <Button
+                android:id="@+id/addTaskBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/layout_style2"
+                android:padding="5dp"
+                android:text="@string/addTaskBtn"
+                android:textColor="@color/co7"
+                android:textSize="20dp" />
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/signupView"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginBottom="60dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/addTaskBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/layout_style2"
-            android:padding="5dp"
-            android:text="@string/addTaskBtn"
-            android:textColor="@color/white"
-            android:textSize="20dp" />
-
-    </androidx.cardview.widget.CardView>
 
 
     <ImageView
