Create a new activity named Profile and create its XML design
Create a new text’s frame for the profile page

Add new icons

The colors of some of the previous frames have been changed

New colors have been added
—————————
in the activity_tasks page:
 - The background color has been changed
 - Add the profile button
 - Change the size of the "Add a new task" button
—————————
in the activity_sign_up page:
 - The background color has been changed
—————————
in the activity_main page:
 - The background color has been changed
 - The logo has been changed to a logo that matches the background color

--- a/app/src/main/res/drawable-v24/frame_style1.xml
+++ b/app/src/main/res/drawable-v24/frame_style1.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:topLeftRadius="100dp" />
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/co10" />
 </shape>
