--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,8 @@
     <color name="co6">#9A89CE</color>
     <color name="co7">#695D8B</color>
     <color name="co8">#CBC5DB</color>
+    <color name="co9">#E3DFED</color>
+    <color name="co10">#F2F0F8</color>
+
 
 </resources>
