--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,11 @@
 
         <ImageView
             android:id="@+id/langBtn"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="end"
-            android:layout_marginEnd="30dp"
-            app:srcCompat="@drawable/language_icon" />
+            android:layout_marginEnd="27dp"
+            app:srcCompat="@drawable/language1" />
 
         <TextView
             android:id="@+id/textView"
@@ -57,7 +57,7 @@
             android:layout_height="150dp"
             android:layout_gravity="center"
             android:layout_marginVertical="15dp"
-            app:srcCompat="@drawable/kk1_logo" />
+            app:srcCompat="@drawable/logo_kk" />
 
         <TextView
             android:id="@+id/loginTv"
