--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".TasksActivity">
+    tools:context=".TasksActivity"
+    android:background="@color/co10">
 
     <LinearLayout
         android:id="@+id/titleLay"
@@ -30,7 +31,7 @@
         android:layout_height="90dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="40dp"
         app:layout_constraintTop_toBottomOf="@+id/titleLay"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +104,8 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_marginTop="10dp"
-
+        android:background="@drawable/frame_style3"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,25 +120,47 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="22dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/profileCard"
         app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/addingBtn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:background="@drawable/button"
             android:clickable="true"
             android:text="+"
             android:textColor="@color/co6"
             android:textSize="35dp" />
     </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/profileCard"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/co6"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <Button
+            android:id="@+id/profileBtn"
+            android:background="@drawable/profile"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_margin="3dp"
+            android:textColor="@color/co7" />
+    </androidx.cardview.widget.CardView>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
