--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -11,18 +11,54 @@
         android:id="@+id/titleLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:background="@color/co6"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:srcCompat="@drawable/kk_logo" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="5dp"
+                app:srcCompat="@drawable/kk_logo" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="end"
+            >
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/profileCard"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@color/co6"
+                android:layout_gravity="center"
+                app:cardCornerRadius="30dp"
+                android:layout_marginEnd="20dp"
+                app:cardElevation="20dp" >
+
+                <Button
+                    android:id="@+id/profileBtn"
+                    android:background="@drawable/profile"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:layout_margin="3dp"
+                    android:textColor="@color/co7" />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
@@ -123,42 +159,20 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="22dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="50dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/profileCard"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/addingBtn"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/button"
+            android:background="@drawable/add"
             android:clickable="true"
-            android:text="+"
             android:textColor="@color/co6"
-            android:textSize="35dp" />
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/profileCard"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/co6"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
-
-        <Button
-            android:id="@+id/profileBtn"
-            android:background="@drawable/profile"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_margin="3dp"
-            android:textColor="@color/co7" />
+            />
     </androidx.cardview.widget.CardView>
 
 
