- Add functionality for guest user - Increase delete button size - Move some text from layout to string file - Add confirm dialog to delete task - Optimize language option

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="New Task"
+            android:text="@string/NewTask"
             android:textColor="@color/co7"
             android:textSize="25sp"
             android:textStyle="bold" />
