--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
-            android:text="Sign in"
+            android:text="@string/Signin"
             android:textColor="@color/co6"
             android:textSize="30dp"
             android:textStyle="bold" />
@@ -164,7 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            android:text="Not a member?"
+            android:text="@string/member"
             android:textSize="20dp" />
 
         <TextView
