--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -206,7 +206,7 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/signupBtn"
+            android:id="@+id/signinpBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
