--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,7 +91,7 @@
                 android:ems="10"
                 android:hint="@string/username_hint"
                 android:inputType="textPersonName"
-                android:paddingStart="10dp"
+                android:paddingHorizontal="10dp"
                 android:textSize="20dp" />
 
         </androidx.cardview.widget.CardView>
@@ -114,9 +114,9 @@
                 android:ems="10"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
-                android:padding="5dp"
-                android:paddingStart="10dp"
-                android:textSize="20dp" />
+                android:paddingHorizontal="10dp"
+                android:textSize="20sp"
+                />
 
         </androidx.cardview.widget.CardView>
 
@@ -128,7 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:layout_marginBottom="30dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="20dp"
         app:cardElevation="15dp"
         app:layout_constraintBottom_toTopOf="@id/signupLay"
         app:layout_constraintEnd_toEndOf="parent"
@@ -138,7 +138,7 @@
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/layout_style2"
+            android:background="@drawable/layout_style"
             android:padding="5dp"
             android:text="@string/loginBtn"
             android:textColor="@color/co7"
