--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -64,7 +64,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/topLay"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="20dp"
         app:cardElevation="20dp"
         android:layout_marginTop="20dp"
@@ -102,7 +102,7 @@
             <LinearLayout
                 android:id="@+id/totalLay"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center"
                 android:orientation="vertical"
@@ -151,7 +151,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/tasks_row"/>
+            />
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
