- Modify some string to support both languages

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -18,13 +18,13 @@
 
         <TextView
             android:id="@+id/signupTv"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/signupBtn"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="36dp"
-            android:textStyle="italic" />
+            android:textSize="38sp"
+             />
     </LinearLayout>
 
 
@@ -207,7 +207,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            android:text="Already a member?"
+            android:text="@string/member"
             android:textSize="20dp" />
 
         <TextView
@@ -215,7 +215,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
-            android:text="Sign in"
+            android:text="@string/Signin"
             android:textAlignment="center"
             android:textColor="@color/co7"
             android:textSize="20dp"
